# eromescraper

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt  run.bat
src/: __init__.py  main.py
src/api/: __init__.py  routes.py  websocket.py
src/downloader/: __init__.py  manager.py
src/scraper/: __init__.py  core.py  models.py
src/static/: app.js  index.html  styles.css
src/utils/: config.py  exceptions.py  queue.py  sanitize.py
tests/: __init__.py  test_scraper.py
